# doclens

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
doclens/: answer.py  chunker.py  cli.py  fusion.py  hybrid.py  index.py  ingest.py  ingest_url.py  lexical.py  ratelimit.py  rerank.py  server.py  sessions.py  trace.py  types.py
doclens/providers/: _http.py  gemini.py  registry.py
docs/blog/: when-llm-reranking-hurt-my-rag.md
docs/superpowers/plans/: 2026-07-14-doclens-core.md  2026-07-14-doclens-web.md  2026-07-15-doclens-chat.md  2026-07-15-doclens-hybrid-rerank-tracing.md
docs/superpowers/specs/: 2026-07-14-doclens-design.md  2026-07-15-doclens-retrieval-observability-upgrade.md
evals/: gold.yaml  metrics.py  report.py  run.py
evals/corpus/: device-manual.md  hybrid_probe.md  policy.md  rfc-style-spec.md
tests/: test_answer.py  test_chunker.py  test_cli.py  test_eval_run.py  test_fusion.py  test_hybrid.py  test_index.py  test_ingest_pdf.py  test_ingest_url.py  test_lexical.py  test_metrics.py  test_package.py  test_providers.py  test_ratelimit.py  test_rerank.py  test_server_ask.py  test_server_ingest.py  test_server_static.py  test_sessions.py  test_trace.py  test_types.py
web/: app.js  index.html  style.css
