[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doclens"
version = "0.1.0"
description = "RAG Q&A over your PDFs and links — with retrieval evals"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nagender Swaroop Srivastava", email = "nagendernss.work@gmail.com" }]
dependencies = ["httpx>=0.27", "pyyaml>=6.0", "pypdf>=4.0", "selectolax>=0.3", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
web = ["fastapi>=0.115", "uvicorn>=0.30", "python-multipart>=0.0.9"]

[project.scripts]
doclens = "doclens.cli:main"

[tool.setuptools.packages.find]
include = ["doclens*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
